Fixed some sizing issues, adding more visibility tweaks.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,8 +87,50 @@
 
   body {
     background-color: plum;
-    background-image: url(/img/ai_bg.jpg);
-    background-repeat: repeat;
+    background: url(/img/ai_bg.jpg) no-repeat center fixed;
+    background-size: cover;
   }
 
+  .form-control{
+    font-family: comfortaaBold !important;
+  }
+
+
+  a {
+    float: left;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #9d3cce;
+  }
+  
+  a:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    height: 3px;
+    width: 0;
+    background: transparent;
+  }
+
+  .nav-link:after {
+    transition: width .5s ease, background-color .5s ease, left .5s ease;
+  }
+  
+  .nav-link:hover:after {
+    width: 100%;
+    left: 0;
+    background: black;
+  }
+
+  .nav-link {
+    color: darkmagenta;
+    padding-right: 30%;
+  }
+
+  .nav-link:hover {
+    color: black;
+  }
   
